# commonGL

./: CMakeLists.txt
common/: Init.h
common/glad_driver/: module.cpp  module.h
modules/a_initialization/: module.cpp  module.h
modules/index_buffer/: module.cpp  module.h
modules/logging/: module.cpp  module.h
modules/renderer/: module.cpp  module.h
modules/shader/: module.cpp  module.h
modules/texture/: module.cpp  module.h
modules/vertex_array/: module.cpp  module.h
modules/vertex_buffer/: module.cpp  module.h
modules/vertex_buffer_layout/: module.cpp  module.h
project_build/: functions.cmake
